# riscairo_template

./: .gitignore  Cargo.toml  README.md  Scarb.toml  build.sh  build_run.sh  convert.py  try_me.py
.cargo/: config.toml
guest_rs/: Cargo.toml  link.ld
guest_rs/src/: main.rs
host_cairo/: Scarb.toml
host_cairo/src/: lib.cairo
riscv/: Cargo.toml
riscv/src/: cairo.rs  config.rs  main.rs  proto.rs  rust.rs
riscv/src/cairo/: constants.rs  lib.cairo  scarb.toml
riscv/src/cairo/new_prj/: lib.cairo
riscv/src/proto/: constants.rs  interface.proto
riscv/src/rust/: Cargo.toml  constants.rs  main.rs
riscv/src/rust/new_prj/: Cargo.toml  config.toml  main.rs  rv.rs
riscv/src/rust/template_prj/: main.rs
src/: guest_rs_bytecode.cairo  lib.cairo
tests/: lib.cairo
xtask/: Cargo.toml
xtask/src/: cairo.rs  config.rs  main.rs  proto.rs  rust.rs
xtask/src/cairo/: constants.rs
xtask/src/proto/: constants.rs
xtask/src/rust/: constants.rs
